# RocketModel

./: .gitignore  Aero_Config.py  FlightCalculator.py  FlightSimMod8.py  FlightSimMod9.3.py  LICENSE  README.md  Rocket_Config.py  Rocket_config.py  Simulation_Config.py  main.py  main.spec  mian.py  pyproject.toml  rocket_config.py
Config/: Aero_Config.py  Rocket_Config.py  Simulation_Config.py  __init__.py
GUI/: FigureWidget.py  MainUi.py  MotorConfigUi.py  RocketConfigUi.py  SimulationConfigUi.py  __init__.py  guiRocketConfig.py  guiRocketConfig.ui  guiRocketConfig2.py
src/: main.py
src/Config/: Aero_Config.py  Rocket_Config.py  Simulation_Config.py  __init__.py
src/GUI/: MainUi.py  MotorConfigUi.py  RocketConfigUi.py  SimulationConfigUi.py
src/rocket_model/: main.py
src/rocket_model/config/: Aero_Config.py  Rocket_Config.py  Simulation_Config.py  __init__.py  aero_config.py  atmospheric_properties.csv  simulation_config.py
src/rocket_model/gui/: FigureWidget.py  MotorConfigUi.py  RocketConfigUi.py  SimulationConfigUi.py  figure_widget.py  main_ui.py  motor_config_ui.py  resource_path.py  rocket_config_ui.py  simulation_config_ui.py
src/rocket_model/simulation/: simulation.py
src/rocket_model/utils/: vaild_input.py
tests/: test_valid_input.py
