[tool.poetry]
name = "rocketmodel"
version = "2.1.0"
description = "Simple rocket model for flight simulations"
authors = ["andrerhenry <kinghenry238@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "rocket_model", from = "src" },
]


[tool.poetry.dependencies]
python = "~3.12.0"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
PySide6 = "^6.7.3"
pyside6-essentials = "^6.7.3"
scipy = "^1.14.1"



[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
scipy-stubs = "^1.4.1a3"
urllib3 = "^2.2.3"



[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
