[project]
name = "rocketmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pyside6>=6.8.2.1",
    "pyside6-essentials>=6.8.2.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "scipy-stubs>=1.15.2.0",
]
