[project]
name = "rocketmodel"
version = "2.2.0"
requires-python = ">=3.10"
description = "Simple rocket model for flight simulations"
authors = [{name = "Andre Henry", email = "kinghenry238@gmail.com"}]
license = "MIT"
readme = "README.md"

dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pyside6>=6.9.0",
    "pyside6-essentials>=6.9.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
    "scipy-stubs>=1.15.3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]